Fix text overflowing songs in queue

--- a/public/resources/mock.css
+++ b/public/resources/mock.css
@@ -182,6 +182,7 @@ input:focus {
     color: #d0d0d0;
     text-shadow: 0px -1px 0 #000;
     border-top: 1px solid #555;
+    overflow: hidden;
 }
 
 .queue .song.playing {
